# wannadb

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  EXTRACTORS.md  LICENSE.md  README.md  ROUTES.md  WEBSERVER_STRUCTURE.md  app.py  backend-requirements.txt  celery_app.py  config.py  core-requirements.txt  docker-compose-prod.yaml  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: new_stable_version.yml  new_stable_version_manual.yml  new_stable_version_push.yml
backend/: routes.py
box2go/: asgi.py  settings.py  urls.py  wsgi.py
evaluation/: README.md  automatic_feedback.py  experiment_3.py  plot_results.py  util.py
experiments/: automatic_feedback.py  experiment_runner.py  util.py
flask_app/: dev.py  endpoints.py  user.py
logs/: user_report.txt
postgres/: queries.py  transactions.py  util.py
prod/: build.sh  rebuild.sh  up.sh
scripts/: preprocess.py
tests/: test_data.py
tmp/: Web_API_Thread.py  Web_Thread_Manager.py
wannadb/: change_captor.py  configuration.py  interaction.py  models.py  resources.py  statistics.py  status.py  utils.py
wannadb/data/: data.py  signals.py
wannadb/matching/: custom_extractor.py  custom_match_extraction.py  distance.py  matching.py
wannadb/preprocessing/: dimension_reduction.py  embedding.py  extraction.py  label_paraphrasing.py  normalization.py  other_processing.py
wannadb/querying/: grouping.py
wannadb_parsql/: cache_db.py  parsql.py  rewrite.py  sql_tokens.py
wannadb_ui/: common.py  data_insights.py  document_base.py  interactive_matching.py  main_window.py  start_menu.py  study.py  visualizations.py  wannadb_api.py
wannadb_web/: entrypoint.sh  util.py
wannadb_web/.env/: .dev
wannadb_web/Redis/: RedisCache.py  util.py
wannadb_web/SQLite/: Cache_DB.py  util.py
wannadb_web/postgres/: queries.py  transactions.py  util.py
wannadb_web/routing/: core.py  dev.py  files.py  user.py
wannadb_web/worker/: Signal.py  Signals.py  Web_API.py  data.py  tasks.py  util.py
web/: __init__.py  admin.py  models.py  urls.py  views.py
web/migrations/: 0001_initial.py  (+8 more)
(+14 files in other folders)
