[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "wannadb"
version = "0.0.1"
authors = [
    { name = "Benjamin Hättasch" },
    { name = "Jan-Micha Bodensohn" },
    { name = "Liane Vogel" },
]
description = "WannaDB: Ad-hoc SQL Queries over Text Collections"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pymongo==3.12.1",
    "torch==1.10.0",
    "numpy==1.21.4",
    "pandas==1.3.4",
    "scipy==1.7.2",
    "stanza==1.3.0",
    "spacy==3.2.0",
    "sentence-transformers==2.1.0",
    "matplotlib==3.5.0",
    "seaborn==0.11.2",
    "scikit-learn==1.0.1",
    "transformers==4.12.5",
    "PyQt6==6.2.1",
    "sqlparse==0.4.2",
]

[project.urls]
"Homepage" = "https://github.com/DataManagementLab/wannadb"

[tool.setuptools]
packages = [
    "wannadb",
    "wannadb_parsql",
    "wannadb_ui",
]