[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "wannadb"
version = "0.0.1"
authors = [
    { name = "Benjamin Hättasch" },
    { name = "Jan-Micha Bodensohn" },
    { name = "Liane Vogel" },
]
description = "WannaDB: Ad-hoc SQL Queries over Text Collections"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pymongo==4.8.0",
    "torch==2.4.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scipy==1.14.0",
    "stanza==1.8.2",
    "spacy==3.7.5",
    "sentence-transformers==3.0.1",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "scikit-learn==1.5.1",
    "transformers==4.43.3",
    "PyQt6==6.7.1",
    "sqlparse==0.5.1",
    "faiss-cpu==1.8.0.post1",
    "nltk==3.8.1",
]

[project.urls]
"Homepage" = "https://github.com/DataManagementLab/wannadb"

[tool.setuptools]
packages = [
    "wannadb",
    "wannadb_parsql",
    "wannadb_ui",
]